<resources>
    <string name="app_name">My Best Friend</string>
    <string name="hint_username">Nombre del Usuario</string>
    <string name="hint_mail">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_register">Registrarse</string>
    <string name="btn_signin">Registrarse</string>
    <string name="btn_login">Ingresar</string>
    <string name="main_activity_title">My Best Friend</string>
    <string name="input_pet_image">Ingrese image de la mascota</string>
    <string name="btn_reportar">Reportar</string>
    <string name="hint_location">Ubicación</string>
    <string name="hint_comment">Comentario</string>
    <string name="resport_lost_pet">Reportar Perdida</string>
    <string name="action_search">Search</string>
    <string name="action_account">My Account</string>
    <string name="action_map">Map</string>
    <string name="myAccountTitle">Mi Cuenta</string>
    <string name="mapactivity_title">Mapa</string>
    <string name="btn_new_user">Nuevo Usuario?</string>
    <string name="hint_password_repeat">Repita Contraseña</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_name">Persona Responsable</string>
    <string name="txt_menuoptions_account">Cuenta</string>
    <string name="txt_menuoptions_settings">Preferencias</string>
    <string name="txt_menuoptions_logout">Salir</string>
    <string name="txt_prefCat_account">Cuenta</string>
    <string name="pref_title_username">Nombre de Usuario</string>
    <string name="pref_title_email">Correo Electrónico</string>
    <string name="hint_search_map">Buscar...</string>
    <string name="api_key">AIzaSyClj3BB5b-yMF5MP_Z5VljSKAufhZa06ZQ</string>
    <string name="btn_retry">Reintentar</string>
    <string name="notifications_loading_msg">Cargando Notificaciones...</string>
    <string name="error_no_results_found">No existen resultados</string>
    <string name="pet_loading_message">Cargando mascotas...</string>
    <string name="validation_error_message">Ingrese Campos</string>
    <string name="success_image_saved">No se guardo satisfactoriamente la imagen</string>
    <string name="failure_image_saved">Se guardo satisfactoriamente la imagen</string>
    <string name="report_title">Nuevo Reporte</string>
    <string name="login_error_validation_message">No ha ingresado Usuario o Contraseña</string>
    <string name="login_error_noidentified">Usuario no Identificado</string>
    <string name="login_identified">Usuario Identificado</string>
    <string name="close_session_message">¿Está seguro que quiere cerrar sesión?</string>
    <string name="close_session_title">Cerrar Sesión</string>
    <string name="btn_yes">Si</string>
    <string name="btn_no">No</string>
    <string-array name="users_10_lost">
        <item>sraguevara</item>
        <item>martinalejandro97</item>
        <item>pamelavega31</item>
        <item>mabeortizr</item>
        <item>reimososha24</item>
        <item>solllerena</item>
    </string-array>
    <string-array name="address_10_lost">
        <item>Tumbaco, Luis Cordero</item>
        <item>Florencia y Miguel ángel</item>
        <item>Vía intervalles 2da transversal Conjunto San Pietro</item>
        <item>Barrió Santa Inés calle María auxiliadora y francisco de asís e73-29</item>
        <item>Eloy Alfaro y Cristo Rey Oe3-24</item>
        <item>Francisco de Orellana y Pampita Conjunto la comarca</item>
    </string-array>
    <string-array name="comment_10_lost">
        <item>¡Hola! Encontré este perrito en la calle cerca del colegio Saint Dominic School, creo que tiene 6 meses de edad es súper cariñoso y educado. ¿Quién quiere adoptarlo?</item>
        <item>Saludos, por motivos de negocios estoy saliendo fuera del país por 6 meses. Me preguntaba quién podría cuidar de mi cachorro es de raza Pastor Alemán tiene 5 meses.</item>
        <item>Hola, ¿Quién quiere adoptar una gata? La encontré en el mercado de Sangolqui es súper linda.</item>
        <item>Hola encontré este perrito cerca de mi casa ¿Quién quiere adoptarlo?</item>
        <item>Chicos si quieren un perrito tierno, amigable y súper educado además de ser buen compañero. Mi perrito se llama “Chucho” tiene 8 meses cualquier cosa avísenme ya que me estoy yendo a vivir a Ibarra y no quiero dejarlo botando.</item>
        <item>¡Hola! ¿Quién quiere adoptar un perrito? Lo encontré camino a la universidad aun que esta algo sucio y descuidado sé que con cariño y amor va a estar mejor.</item>
    </string-array>
    <string-array name="users_20_lost">
        <item>sraguevara</item>
        <item>martinalejandro97</item>
        <item>pamelavega31</item>
        <item>mabeortizr</item>
        <item>reimososha24</item>
        <item>solllerena</item>
        <item>Cynthia Hidalgo</item>
        <item>Sebastián Auz</item>
        <item>Bernarda Carranza</item>
        <item>Helder Nuñez</item>
        <item>Pamela Aguilar</item>
        <item>Cesar Rampón</item>
    </string-array>
    <string-array name="address_20_lost">
        <item>Tumbaco, Luis Cordero</item>
        <item>Florencia y Miguel ángel</item>
        <item>Vía intervalles 2da transversal Conjunto San Pietro</item>
        <item>Barrió Santa Inés calle María auxiliadora y francisco de asís e73-29</item>
        <item>Eloy Alfaro y Cristo Rey Oe3-24</item>
        <item>Francisco de Orellana y Pampita Conjunto la comarca</item>
        <item>Cumbayá - La primavera, Raffaele Giannetti</item>
        <item>Sebastián Auz	Cumbayá - Rancho San Francisco</item>
        <item>Cumbayá - La Comarca, Ed. Aranjuez II</item>
        <item>Cumbayá – Conjunto </item>
        <item>Cumbayá – Francisco de Orellana y El Ceibo</item>
        <item>Cumbayá – Conjunto La Vieja Hacienda </item>
    </string-array>
    <string-array name="comment_20_lost">
        <item>¡Hola! Encontré este perrito en la calle cerca del colegio Saint Dominic School, creo que tiene 6 meses de edad es súper cariñoso y educado. ¿Quién quiere adoptarlo?</item>
        <item>Saludos, por motivos de negocios estoy saliendo fuera del país por 6 meses. Me preguntaba quién podría cuidar de mi cachorro es de raza Pastor Alemán tiene 5 meses.</item>
        <item>Hola, ¿Quién quiere adoptar una gata? La encontré en el mercado de Sangolqui es súper linda.</item>
        <item>Hola encontré este perrito cerca de mi casa ¿Quién quiere adoptarlo?</item>
        <item>Chicos si quieren un perrito tierno, amigable y súper educado además de ser buen compañero. Mi perrito se llama “Chucho” tiene 8 meses cualquier cosa avísenme ya que me estoy yendo a vivir a Ibarra y no quiero dejarlo botando.</item>
        <item>¡Hola! ¿Quién quiere adoptar un perrito? Lo encontré camino a la universidad aun que esta algo sucio y descuidado sé que con cariño y amor va a estar mejor.</item>

        <item>Encontré esta cachorrita corriendo por lumbisí, alguien interesado en adoptarla??!</item>
        <item>Ya no me dejan tener a este bebe en casa, es un hermoso! Alguien recíbalo!</item>
        <item>Chicos alguien adopte a Milo pues voy a viajar y no lo puedo llevar conmigo…..alguien interesado?</item>
        <item>Encontré este gatito paseando cerca de la USFQ, alguien lo adopt?</item>
        <item>No tengo patio y a Bruno le encanta correr, alguien lo puede adoptar?</item>
        <item>Rex necesita un hogar! Adoptenlo! </item>

    </string-array>
    <string-array name="users_30_lost">
        <item>sraguevara</item>
        <item>martinalejandro97</item>
        <item>pamelavega31</item>
        <item>mabeortizr</item>
        <item>reimososha24</item>
        <item>solllerena</item>
        <item>Cynthia Hidalgo</item>
        <item>Sebastián Auz</item>
        <item>Bernarda Carranza</item>
        <item>Helder Nuñez</item>
        <item>Pamela Aguilar</item>
        <item>Cesar Rampón</item>
        <item>CarlaDiaz</item>
        <item>Mijailalt</item>
        <item>Paulareign</item>
        <item>Alejobony</item>
        <item>Jairodav</item>
        <item>Jh2o</item>
    </string-array>
    <string-array name="address_30_lost">
        <item>Tumbaco, Luis Cordero</item>
        <item>Florencia y Miguel ángel</item>
        <item>Vía intervalles 2da transversal Conjunto San Pietro</item>
        <item>Barrió Santa Inés calle María auxiliadora y francisco de asís e73-29</item>
        <item>Eloy Alfaro y Cristo Rey Oe3-24</item>
        <item>Francisco de Orellana y Pampita Conjunto la comarca</item>
        <item>Cumbayá - La primavera, Raffaele Giannetti</item>
        <item>Sebastián Auz	Cumbayá - Rancho San Francisco</item>
        <item>Cumbayá - La Comarca, Ed. Aranjuez II</item>
        <item>Cumbayá – Conjunto </item>
        <item>Cumbayá – Francisco de Orellana y El Ceibo</item>
        <item>Cumbayá – Conjunto La Vieja Hacienda </item>
        <item>Inchalillo, Ines gangotena y Chillianes</item>
        <item>Selva Alegre, Juan de Salines y Antonio Checa</item>
        <item>Selva Alegre, Club los chillos casa 72</item>
        <item>Terracota H casa 30</item>
        <item>La Merced, Tampa</item>
        <item>San Pedro, Conjunto Arupos de la Hacienda</item>
    </string-array>
    <string-array name="comment_30_lost">
        <item>¡Hola! Encontré este perrito en la calle cerca del colegio Saint Dominic School, creo que tiene 6 meses de edad es súper cariñoso y educado. ¿Quién quiere adoptarlo?</item>
        <item>Saludos, por motivos de negocios estoy saliendo fuera del país por 6 meses. Me preguntaba quién podría cuidar de mi cachorro es de raza Pastor Alemán tiene 5 meses.</item>
        <item>Hola, ¿Quién quiere adoptar una gata? La encontré en el mercado de Sangolqui es súper linda.</item>
        <item>Hola encontré este perrito cerca de mi casa ¿Quién quiere adoptarlo?</item>
        <item>Chicos si quieren un perrito tierno, amigable y súper educado además de ser buen compañero. Mi perrito se llama “Chucho” tiene 8 meses cualquier cosa avísenme ya que me estoy yendo a vivir a Ibarra y no quiero dejarlo botando.</item>
        <item>¡Hola! ¿Quién quiere adoptar un perrito? Lo encontré camino a la universidad aun que esta algo sucio y descuidado sé que con cariño y amor va a estar mejor.</item>

        <item>Encontré esta cachorrita corriendo por lumbisí, alguien interesado en adoptarla??!</item>
        <item>Ya no me dejan tener a este bebe en casa, es un hermoso! Alguien recíbalo!</item>
        <item>Chicos alguien adopte a Milo pues voy a viajar y no lo puedo llevar conmigo…..alguien interesado?</item>
        <item>Encontré este gatito paseando cerca de la USFQ, alguien lo adopt?</item>
        <item>No tengo patio y a Bruno le encanta correr, alguien lo puede adoptar?</item>
        <item>Rex necesita un hogar! Adoptenlo! </item>

        <item>Su nombre es Toby busca un hogar donde le brinden mucho amor y mucho tiempo para ser feliz </item>
        <item>Cahorrita para adopción responsable</item>
        <item>Perrita en adopción se llama Sheyla se lleva muy bien con los niños</item>
        <item>Perrita necesita adopción la encontré hace dos años en el sector de la carolina ya no puedo tenerla mas tiempo</item>
        <item>Molly tiene dos años y quiere un hogar, le gustan mucho los niños</item>
        <item>Me llamo Richi busco un dueño responsable que me ame mucho tengo 4 años</item>
    </string-array>
    <string-array name="users_10_adoption">
        <item>gabycalde97</item>
        <item>pedro_aragonec</item>
        <item>felicarrerauio95</item>
        <item>ve333ayala</item>
        <item>Josselyn_D35</item>
        <item>polo17452</item>
    </string-array>
</resources>