<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_account"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:orderInCategory="200"
        android:title="@string/action_map"
        app:showAsAction="ifRoom" />
</menu>
