<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/start_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/initial_dog_image" />


        <Button
            android:id="@+id/input_image"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/start_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/input_pet_image"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"/>


        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/edit_text_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_image"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_name"
            android:inputType="text" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/edit_text_address"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_name"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_location"
            android:inputType="text" />

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/edit_text_comment"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_address"
            android:layout_centerHorizontal="true"
            android:hint="@string/hint_comment"
            android:inputType="textPassword" />


        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/btn_reportar"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_comment"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:text="@string/btn_reportar"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent"/>

    </RelativeLayout>

</LinearLayout>