<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_large"
            android:layout_marginRight="@dimen/activity_horizontal_margin_large"
            android:layout_marginTop="@dimen/material_design_margin">

            <ImageView
                android:id="@+id/start_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/material_design_margin"
                android:src="@drawable/initial_dog_image"/>

            <EditText
                style="@style/EditTextTheme"
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/material_design_margin"
                android:hint="@string/hint_username"
                android:inputType="text"/>


            <com.mywaytech.puppiessearchclient.widgets.CustomEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_name"
                android:layout_centerHorizontal="true"
                android:hint="@string/hint_password"
                android:layout_marginTop="@dimen/material_design_small_margin"
                android:inputType="textPassword"/>

            <com.mywaytech.puppiessearchclient.widgets.CustomEditText
                android:id="@+id/edit_text_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_text_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/material_design_small_margin"
                android:hint="@string/hint_password_repeat"
                android:inputType="textPassword"/>

            <EditText
                style="@style/EditTextTheme"
                android:id="@+id/edit_text_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_design_small_margin"
                android:layout_below="@+id/edit_text_password_repeat"
                android:layout_centerHorizontal="true"
                android:hint="@string/hint_mail"
                android:inputType="textEmailAddress"/>

            <EditText
                style="@style/EditTextTheme"
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/material_design_small_margin"
                android:layout_below="@+id/edit_text_mail"
                android:layout_centerHorizontal="true"
                android:hint="@string/hint_address"
                android:inputType="text"/>


        </RelativeLayout>

    </LinearLayout>
</ScrollView>
